--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bluebird": "^3.4.1",
     "knex": "^0.11.7",
+    "lodash": "^4.14.0",
     "pg": "^6.0.3",
     "prettyjson": "^1.1.3",
     "sqlite": "^2.1.0"
